Fri Jan  7 23:03:51 CET 2000  Sven Neumann <sven@gimp.org> 

	* app/preferences_dialog.c: Doh, how much do I hate to hack this 
	sucker... Added the possibility to change the tile_cache_size on 
	the fly (untested!!) and tried to give some better user feedback on
	changes that are only applied after a restart. 
	
	We should try to get rid of most of those cases wherever posssible
	since the message "You have to restart." strongly reminds me to that 
	braindead thing... (you know, some people call it an OS). 

Fri Jan  7 20:27:55 CET 2000  Sven Neumann <sven@gimp.org>

	* plug-ins/common/sunras.c
	* plug-ins/fits/fits.c
	* plug-ins/gap/gap_range_ops.c
	* plug-ins/gap/gap_split.c: fixed some typos

2000-01-08  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/scatter_hsv.c
	* plug-ins/common/semiflatten.c
	* plug-ins/common/sharpen.c
	* plug-ins/common/shift.c
	* plug-ins/common/smooth_palette.c
	* plug-ins/common/snoise.c
	* plug-ins/common/sobel.c
	* plug-ins/common/sparkle.c
	* plug-ins/common/spread.c
	* po-plug-ins/POTFILES.in: added gettext support.

Fri Jan  7 16:06:24 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/common/gauss_iir.c
	* plug-ins/common/ripple.c: Typo fixes.

2000-01-07  Asbjorn Pettersen  <asbjornP@dualog.no>

	* modules/colorsel_water.c: Add OS/2 support.

	* modules/modregister.c (mod_color_selector_unregister): fix
	OS/2 bug. Use "gimp_color_selector_unregister".

2000-01-07  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/hot.c
	* plug-ins/common/hrz.c
	* plug-ins/common/illusion.c
	* plug-ins/common/iwarp.c
	* plug-ins/common/jigsaw.c
	* plug-ins/common/jpeg.c
	* plug-ins/common/lic.c
	* plug-ins/common/mail.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/mblur.c
	* plug-ins/common/newsprint.c
	* plug-ins/common/nlfilt.c
	* plug-ins/common/noisify.c
	* plug-ins/common/nova.c
	* plug-ins/common/oilify.c: some more help-aware plugins.
